@@ -12,6 +12,7 @@ export("strintrplt")
 export("scalaInstall")
 export("scalaSettings")
 export("scalaInfo")
+export("scalaFunctionArgs")
 export("scalaNull")
 export("II")
 # export("scalap")
